@@ -354,6 +354,11 @@ Each tokenset name is followed by colon (:) and the description text:
     unimportant-graphs: Unimportant Graphs
   </param>
 
+=item * C<suppress-legend>
+
+if set to C<yes>, the legend is not shown. It usually has uptime,
+software version, and contact information for the SNMP device.
+
 =back
 
 
